--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
             <plugin>
                 <groupId>se.kth.castor</groupId>
                 <artifactId>depclean-maven-plugin</artifactId>
-                <version>2.0.1-SNAPSHOT</version>
+                <version>2.0.0</version>
                 <executions>
                     <execution>
                         <goals>
