--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,29 @@
             <artifactId>selenium-api</artifactId>
             <version>3.141.59</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>me.tongfei</groupId>
+            <artifactId>progressbar</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 
     </dependencies>
 
@@ -48,7 +71,7 @@
             <plugin>
                 <groupId>se.kth.castor</groupId>
                 <artifactId>depclean-maven-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.0.1-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <goals>
